--- a/teste.html
+++ b/teste.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+   
     <style>
-        @font-face {
-            font-family: ;
-            src: url();
-        }
-    </style>
+        h2:hover{
+        background-color: blueviolet;
+    }
+    div{
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        background-color: blueviolet;
+    }
     
+    
+    </style>
 </head>
 <body>
     <h1>Teste</h1>
     <p>Lorem <mark>ipsum dolor sit amet</mark> <em>consectetur </em>adipisicing elit. Ullam officiis fuga perferendis eveniet aliquid <ins>voluptatem</ins> eligendi officia ducimus, sint dolorum sit sed reprehenderit, eos, iste doloribus molestiae explicabo provident cum.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <small>Fugiat corrupti quam </small>ex dolorum earum optio quaerat, minus quae necessitatibus nesciunt ab at! Molestiae ipsum saepe ut pariatur, perferendis quaerat minima. X <sup>2</sup> + 3 </p>
 
-    <H2>CÓDIGOS E CITAÇÕES</H2>
+    <H2 id="titulo-2">CÓDIGOS E CITAÇÕES</H2>
     <P><code>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, veritatis vel non eos, assumenda magni, dolor laboriosam</code> explicabo corporis nihil beatae natus aspernatur culpa sapiente reiciendis ducimus corrupti minima. Sapiente?</P>
     <P>   
         <pre> 
@@ -94,7 +101,9 @@
 <li><a href="livro/ensinamentos_extrafisicos_e_projetivos_wagner_borges.zip" download="livro/ensinamentos_extrafisicos_e_projetivos_wagner_borges.zip" type="aplication/zip">Baixar o livro ZIP</a></li>
 
 </ul>
-<h1> fonte corações </h1>
+<div>
+    <img src="img/colcheia-redimensionada.png" alt="">
+</div>
 
 
 </body>
